Update script